# ADWS

./: 2017002_2017027.tar.xz  README.md
ADWS (no steal)/first touch/: out
ADWS/numactl-iall/: out
Random WS/first touch/: out
Random WS/numacth-iall/: out
Sequential/: out
hclib-cse502/: Makefile.am  Makefile.in  README.md  configure  configure.ac  git.commit  install.sh
hclib-cse502/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hclib-cse502/compileTree/: Makefile  config.status  libtool
hclib-cse502/compileTree/src/: Makefile  libhclib.la  libhclib_la-hclib-ddf.lo  libhclib_la-hclib-deque.lo  libhclib_la-hclib-fpp-project.lo  libhclib_la-hclib-hpt.lo  libhclib_la-hclib-mm.lo  libhclib_la-hclib-perfcounter.lo  libhclib_la-hclib-runtime.lo  libhclib_la-hclib-thread-bind.lo  libhclib_la-hclib-timer.lo
hclib-cse502/hclib-install/include/: hclib-async.h  hclib-asyncAwait.h  hclib-atomics.h  hclib-ddf.h  hclib-forasync.h  hclib-hpt.h  hclib-place.h  hclib.h
hclib-cse502/hpt/: hpt-hippo-cache-only.xml
hclib-cse502/inc/: hclib-asyncStruct.h  hclib-mm.h  hclib-rt.h  hclib-timer.h
hclib-cse502/scripts/: gen-generic-asyncAwait-cpp.pl  gen-generic-asyncAwait-header.pl  gen-generic-asyncPhased-cpp.pl  gen-generic-asyncPhased-header.pl  setup.sh
hclib-cse502/src/: Makefile.am  Makefile.in  hclib-ddf.cpp  hclib-deque.cpp  hclib-fpp-project.cpp  hclib-hpt.cpp  hclib-mm.cpp  hclib-perfcounter.cpp  hclib-runtime.cpp  hclib-thread-bind.cpp  hclib-timer.cpp
hclib-cse502/src/inc/: hclib-deque.h  hclib-internal.h  hclib-mm-impl.h
(+26 files in other folders)
